# delaunay-triangulator-2d

./: BUILDING  LAYOUT  ProjectHome.md
src/: CMakeLists.txt
src/internal/: CMakeLists.txt  finalizer.c  finalizer.h  triangle.c
src/internal/io/: CMakeLists.txt  cio.cpp  smreader_sma.h  smwriter_sma.cpp  spreader.h  spreader_node.cpp  spreader_spb.h  spwriter.h  spwriter_spa.cpp  spwriter_spa.h  spwriter_spb.cpp  svreader_sva.h  svreader_svb.cpp  svreader_svb.h  vecniv.h
src/public/: CMakeLists.txt
src/testing/: example_test.cc  triangle_test.cc
trunk/: BUILDING  CMakeLists.txt  COMPILE  DESIGN  README_2D.TXT  README_3D.TXT  TODO  sl_viewer.dsp  slextract.dsp  sp2sp.dsp  sp2sp.plg  sp_diagram.dsp  sp_diagram.plg  sp_viewer.dsp  sp_viewer.plg  spdelaunay2d.dsp  spdelaunay2d.plg  spdelaunay3d.dsp  spdelaunay3d.plg  spfinalize.dsp  spfinalize.plg  spproject.dsw  spproject.ncb  spproject.opt
trunk/demo/: smviewer  spx_z_fine.ele  spx_z_fine.node  trianglef
trunk/inc/: csp_glue.h  delaunay2.h  delaunay3.h  fileutils.h  internals.h  smreadbuffered.h  smreader.h  smreader_off.h  smreader_ply.h  smreader_smc.h  smreadpreascompactpre.h  smwritebuffered.h  smwriter.h  smwriter_nil.h  smwriter_off.h  smwriter_smb.h  smwriter_smc.h  spconverter.h  spdelaunay2d.h  spdelaunay3d.h  spreader_node.h  spreader_ply.h  spreader_raw_d.h  spreader_raw_f.h  spreader_spa.h  spreader_spc.h  spreader_tiles.h  spreadscattered.h  spwriter_nil.h  spwriter_raw.h  spwriter_raw_d.h  spwriter_spb.h  spwriter_spc.h  sscontainer2d.h  sscontainer3d.h  svreader.h  svreader_off.h  svreader_svc.h  svreader_tet.h  svwriter.h  (+7 more)
trunk/lib/: SMlib.lib  SPlib.lib  SVlib.lib
trunk/libD/: SMlib.lib  SPlib.lib  SVlib.lib
trunk/src/: CMakeLists.txt  DartTestfile.txt  Makefile  cmake_install.cmake  csp_consume.c  csp_create.c  delaunay2.cpp  delaunay2d.cpp  delaunay3d.cpp  fileutils.c  mydefs.h  positionquantizer_new.h  predicates.cpp  showme.c  smreader_sma.cpp  smwriter_smb.cpp  sp2sp.cpp  sp_consume.cpp  sp_create.cpp  sp_diagram.cpp  sp_viewer.cpp  spconverter.cpp  spdelaunay2d.cpp  spdelaunay3d.cpp  spfinalizer.cpp  spreader_ply.cpp  spreader_raw.cpp  spreader_raw_d.cpp  spreader_spa.cpp  spreader_tiles.cpp  spreadscattered.cpp  spwriter_raw.cpp  spwriter_raw_d.cpp  sscontainer2d.cpp  sscontainer3d.cpp  triangle.c  triextra.c
trunk/src/internal/: CMakeLists.txt  triangle.c  triangle.h
trunk/src/internal/io/: cio.h  spreader_raw.h  spreader_spb.cpp  svreader_sva.cpp  vec3fv.h
trunk/src/internal/viewers/: CMakeLists.txt
trunk/src/testing/: CMakeLists.txt  FindCppUnit.cmake  testing_main.cc
trunk/stl/: delaunay2.cpp  delaunay3.cpp  spdelaunay2d.cpp  spdelaunay3d.cpp
trunk/testdata/: README
